# pcsc-lite-demo

./: CMakeLists.txt  README.md  atrhandler.c  auth.c  configfile.c  debug.c  debuglog.c  dyn_hpux.c  dyn_macosx.c  dyn_unix.c  error.c  eventhandler.c  hotplug_generic.c  hotplug_libudev.c  hotplug_libusb.c  hotplug_linux.c  hotplug_macosx.c  ifdwrapper.c  libpcscspy.c  main.c  main.cpp  pcsc-wirecheck-dist.c  pcsc-wirecheck-gen.c  pcscdaemon.c  powermgt_generic.c  prothandler.c  readerfactory.c  sd-daemon.c  simclist.c  strlcat.c  strlcpy.c  sys_unix.c  testpcsc.c  tokenparser.c  utils.c  winscard.c  winscard_clnt.c  winscard_msg.c  winscard_msg_srv.c  winscard_svc.c
Drivers/ACS-Unified-Driver-Lnx-Mac-118-P/acsccid-1.1.8/: ChangeLog  aclocal.m4  config.h  config.h.in  config.status  configure  libtool
Drivers/ACS-Unified-Driver-Lnx-Mac-118-P/acsccid-1.1.8/src/: Info.plist  tokenparser.c
Drivers/ACS-Unified-Driver-Lnx-Mac-118-P/acsccid-1.1.8/src/.deps/: libacsccid_la-acr38cmd.Plo  libacsccid_la-ccid.Plo  libacsccid_la-ccid_usb.Plo  libacsccid_la-commands.Plo  libacsccid_la-ifdhandler.Plo  libacsccid_la-simclist.Plo  libacsccid_la-strlcpy.Plo  libacsccid_la-tokenparser.Plo  libacsccid_la-utils.Plo
Drivers/ct-skeleton/: INSTALL  LICENSE  README  ctapi.c  ctapi.h  defines.h  serial.c  serial.h
Drivers/ct-skeleton/docs/: ctapi-howto.html
Drivers/ifd-devkit-1.0.0/: ifdhandler.c
Drivers/ifd-test-1.0/: commands.h  testSIEMENS.c
include/: config.h  ifdhandler.h  pcscd.h  pcsclite.h  winscard.h
(+5 files in other folders)
